--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <link rel="stylesheet" href="/styles.css"></link>
+    <link rel="stylesheet" href="styles.css"></link>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <header>
         <nav class="nav" id="nav">
             <div class="logo">
-                <a href="#"><img class="logo_img" src="/assets/logo.png" alt=""></a>
+                <a href="#"><img class="logo_img" src="./assets/logo.png" alt=""></a>
             </div>
             <ul>
                 <li><a href="#">Cửa hàng</a></li>
@@ -83,6 +83,156 @@
                  </div>
             </div>
             <img class="img_iphone" src="./assets/iphone15pro.png" alt="">    
+        </section>
+        <!-- Iphone15 -->
+        <section class="section_iphone15">
+            <div class="content">
+                <div class="title">
+                    <p>iPhone 15</p>
+                </div>
+                <div class="subtitle">
+                    <p>Camera mới. Thiết kế mới. Mới lịm tim.</p>
+                </div>
+                <div class="button">
+                    <button class="btn_THT">
+                        Tìm hiểu thêm
+                    </button>
+                    <button class="btn_Mua">
+                        Mua
+                    </button>
+                 </div>
+            </div>
+            <img class="img_iphone" src="./assets/iphone15.png" alt="">    
+        </section>
+        <!-- ========== Card ========= -->
+        <!-- watch -->
+        <section class="cards">
+            <!-- watch_s_9 -->
+            <div class="watch_series_9 item">
+                <div class="content">
+                    <div class="title">
+                        <i class="ri-apple-fill"></i>
+                        <p>WATCH</p>
+                        
+                    </div>
+                    <span>SERIES 9</span>
+                    <div class="subtitle">
+                        <p>Thông minh hơn. Sáng hơn. Quyền năng hơn.</p>
+                    </div>
+                    <div class="button">
+                        <button class="btn_THT">
+                            Tìm hiểu thêm
+                        </button>
+                        <button class="btn_Mua">
+                            Mua
+                        </button>
+                     </div>
+                </div>
+                <img class="img_ws9" src="./assets/watch_series_9.png" alt="">
+            </div>
+            <!-- watch_u_2 -->
+            <div class="watch_ultra_2 item">
+                <div class="content">
+                    <div class="title">
+                        <i class="ri-apple-fill"></i>
+                        <p>WATCH</p>
+                    </div>
+                    <span>ULTRA 2</span>
+                    <div class="subtitle">
+                        <p>Một đẳng cấp phiêu lưu mới.</p>
+                    </div>
+                    <div class="button">
+                        <button class="btn_THT">
+                            Tìm hiểu thêm
+                        </button>
+                        <button class="btn_Mua">
+                            Mua
+                        </button>
+                     </div>
+                </div>
+                <img class="img_wu2" src="./assets/watch-ultra2.jpeg" alt="">
+            </div> 
+            <!-- iPad -->
+            <div class="iPad item">
+                <div class="content">
+                    <div class="title">
+                        <p>iPad</p>
+                    </div>
+                    <div class="subtitle">
+                        <p>Thấy là yêu. Vẽ là phiêu. Tuyệt diệu.</p>
+                    </div>
+                    <div class="button">
+                        <button class="btn_THT">
+                            Tìm hiểu thêm
+                        </button>
+                        <button class="btn_Mua">
+                            Mua
+                        </button>
+                     </div>
+                </div>
+                <img class="img_card img_iPad" src="./assets/iPad.jpeg" alt="">
+            </div>
+            <!-- iPad Pro -->
+            <div class="iPad_Pro item">
+                <div class="content">
+                    <div class="title">
+                        <p>iPad Pro</p>
+                    </div>
+                    <div class="subtitle">
+                        <p>Siêu mạnh mẽ với </p>
+                        <img class="img_m2" src="./assets/M2.png" alt="">
+                    </div>
+                    <div class="button">
+                        <button class="btn_THT">
+                            Tìm hiểu thêm
+                        </button>
+                        <button class="btn_Mua">
+                            Mua
+                        </button>
+                     </div>
+                </div>
+                <img class="img_iPadPro" src="./assets/ipad-pro.png" alt="">
+            </div> 
+            <!-- MacbookPro -->
+            <div class="macbook_Pro item">
+                <div class="content">
+                    <div class="title">
+                        <p>MacBook Pro</p>
+                    </div>
+                    <div class="subtitle">
+                        <p>Chấn động. Ấn tượng.</p>
+                    </div>
+                    <div class="button">
+                        <button class="btn_THT">
+                            Tìm hiểu thêm
+                        </button>
+                        <button class="btn_Mua">
+                            Mua
+                        </button>
+                     </div>
+                </div>
+                <img class="img_mbPro" src="./assets/MacbookPro.jpeg" alt="">
+            </div>
+            <!-- AirPods Pro -->
+            <div class="airPods_Pro item">
+                <div class="content">
+                    <div class="title">
+                        <p>AirPods Pro</p>
+                    </div>
+                    <div class="subtitle">
+                        <p>Âm Thanh Thích Ứng. Đang phát.</p>
+                    </div>
+                    <div class="button">
+                        <button class="btn_THT">
+                            Tìm hiểu thêm
+                        </button>
+                        <button class="btn_Mua">
+                            Mua
+                        </button>
+                     </div>
+                </div>
+                <img class="img_apPro" src="./assets/AirPodPro.jpeg" alt="">
+            </div> 
         </section>
     </main>
 </body>
