--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="header" id="header">
         <nav class="nav" id="nav">
-            <div class="logo">
+            <div class="logo">∂
                 <a href="#"><img class="logo_img" src="./assets/logo.png" alt=""></a>
             </div>
             <ul>
@@ -28,7 +28,7 @@
             </ul>
             <div class="nav_tool">
                 <div class="search">
-                    <a href="#"><i class="ri-search-line"></i></a>
+                    <a href="#"><i class="ri-search-2-line"></i></a>
                 </div>
                 <div class="cart">
                     <a href="#"><i class="ri-shopping-cart-2-fill"></i></a>
@@ -234,6 +234,113 @@
                 <img class="img_apPro" src="./assets/AirPodPro.jpeg" alt="">
             </div> 
         </section>
+        <!-- AppleTV -->
+        <section class="apple_TV">
+            <div class="slider">
+                <div class="slides">
+                    <img class="slide" src="./assets/appleTV_1.jpeg" alt="Slide 1">
+                    <img class="slide" src="./assets/appleTV_2.jpeg" alt="Slide 2">
+                    <img class="slide" src="./assets/appleTV_3.png" alt="Slide 3">
+                </div>
+                <button class="prev" onclick="prevSlide()">&#10094;</button>
+                <button class="next" onclick="nextSlide()">&#10095;</button>
+            </div>            
+        </section>
     </main>
+    <footer class="footer">
+        <p class="footer_p">Apple TV+ yêu cầu đăng ký thuê bao.</p>
+        <div class="horizontal-line"></div>
+        <div class="footer_grid">
+            <!-- footerItem -->
+            <div class="footer_item">
+                <p>Mua Sắm Và Tìm Hiểu</p>
+                <ul>
+                    <li>Cửa Hàng</li>
+                    <li>Mac</li>
+                    <li>iPad</li>
+                    <li>iPhone</li>
+                    <li>Watch</li>
+                    <li>AirsPods</li>
+                    <li>TV & Nhà</li>
+                    <li>AirTag</li>
+                    <li>Phụ Kiện</li>
+                </ul>
+            </div>
+
+            <div class="footer_item">
+                <p>Ví Apple</p>
+                <ul>
+                    <li>Ví</li>
+                    <li>Apple Pay</li>
+                </ul>
+            </div>
+
+            <div class="footer_item">
+                <p>Tài khoản</p>
+                <ul>
+                    <li>Quản lý ID Apple Của Bạn</li>
+                    <li>Tài khoản Apple Store</li>
+                    <li>iClound.com</li>
+                </ul>
+            </div>
+
+            <div class="footer_item">
+                <p>Giải trí</p>
+                <ul>
+                    <li>Apple One</li>
+                    <li>Apple TV+</li>
+                    <li>Apple Music</li>
+                    <li>Apple Arcade</li>
+                    <li>Apple Podcasts</li>
+                    <li>Apple Books</li>
+                </ul>
+            </div>
+
+            <div class="footer_item">
+                <p>Apple Store</p>
+                <ul>
+                    <li>Ứng dụng Apple Store</li>
+                    <li>Apple Trade In</li>
+                    <li>Tài chính</li>
+                    <li>Tình Trạng Đơn hàng</li>
+                    <li>Hỗ Trợ Mua Hàng</li>
+                </ul>
+            </div>
+
+            <div class="footer_item">
+                <p>Dành Cho Doanh Nghiệp</p>
+                <ul>
+                    <li>Apple Và Doanh Nghiệp</li>
+                    <li>Mua Hàng Cho Doanh Nghiệp</li>
+                </ul>
+            </div>
+
+            <div class="footer_item">
+                <p>Cho Giáo Dục</p>
+                <ul>
+                    <li>Apple và Giáo Dục</li>
+                    <li>Mua Hàng Cho Đại Học</li>
+                </ul>
+            </div>
+        </div>
+      
+        <div class="timCH">
+            <p>Xem thêm cách để mua hàng: <a href="#">Tìm cửa hàng bán lẻ</a> gần bạn. Hoặc gọi 1800 1192.</p>
+        </div>
+        <div class="horizontal-line"></div> 
+
+        <div class="end">
+            <p>Bản quyền © Apple Inc. 2024 Bảo lưu mọi quyền.</p>
+            <p class="p2">
+                ĐKKD số 0313510827, do Sở KH&ĐT thành phố Hồ Chí Minh cấp ngày 28 tháng 10 năm 2015<br>
+                Giấy phép kinh doanh số 0313510827/KD-0137 do Sở Công Thương thành phố Hồ Chí Minh cấp ngày 23 tháng 5 năm 2018<br>
+                Địa chỉ: Phòng 901, Ngôi Nhà Đức Tại Tp. Hồ Chí Minh, số 33, đường Lê Duẩn, Phường Bến Nghé, Quận 1, thành phố Hồ Chí Minh, Việt Nam<br>
+                Điện thoại: 1800 1192   
+            </p>
+            <img src="./assets/BoCongThuong.png" alt="">
+        </div>
+
+    </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
